--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "generator-tf-infra",
-  "version": "0.1.1",
-  "description": "generator-tf-infra",
+  "version": "0.1.2",
+  "description": "An opinionated generator for Terraform infrastructure projects",
   "license": "MIT",
   "repository": "https://github.com/shladdergoo/generator-tf-infra",
   "author": {
