updating node setup

--- a/.github/workflows/node_cicd.yml
+++ b/.github/workflows/node_cicd.yml
@@ -35,6 +35,7 @@ jobs:
         node-version: '12.x'
         registry-url: 'https://registry.npmjs.org'
         always-auth: true
+        token: '${NODE_AUTH_TOKEN}'
     - run: npm ci
     # - run: npm version patch - TODO: Need to provide github identity for this to succeed
     - run: npm publish
