--- a/.github/workflows/node_cicd.yml
+++ b/.github/workflows/node_cicd.yml
@@ -7,34 +7,38 @@ on:
     branches: [ master ]
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
-    environment: npm
+  # build:
+  #   runs-on: ubuntu-latest
+  #   environment: npm
 
-    strategy:
-      matrix:
-        node-version: [10.x, 12.x, 14.x, 15.x]
+  #   strategy:
+  #     matrix:
+  #       node-version: [10.x, 12.x, 14.x, 15.x]
 
-    steps:
-    - uses: actions/checkout@v2
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v2
-      with:
-        node-version: ${{ matrix.node-version }}
-    - run: npm ci
-    - run: npm run build --if-present
-    - run: npm test
+  #   steps:
+  #   - uses: actions/checkout@v2
+  #   - name: Use Node.js ${{ matrix.node-version }}
+  #     uses: actions/setup-node@v2
+  #     with:
+  #       node-version: ${{ matrix.node-version }}
+  #   - run: npm ci
+  #   - run: npm run build --if-present
+  #   - run: npm test
 
   publish:
-    needs: build
+    # needs: build
     runs-on: ubuntu-latest
     environment: npm
 
     steps:
     - uses: actions/checkout@v2
+    - uses: actions/setup-node@v2
+      with:
+        node-version: '12.x'
+        registry-url: 'https://registry.npmjs.org'
+    - run: cat .npmrc
     - run: npm ci
-    - run: npm set //registry.npmjs.org/:_authToken='${NODE_AUTH_TOKEN}'
     # - run: npm version patch - TODO: Need to provide github identity for this to succeed
-    - run: echo ${NODE_AUTH_TOKEN}
+    - run: npm publish
       env:
         NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
