--- a/.github/workflows/node_cicd.yml
+++ b/.github/workflows/node_cicd.yml
@@ -41,4 +41,4 @@ jobs:
     # - run: npm version patch - TODO: Need to provide github identity for this to succeed
     - run: npm publish
       env:
-        NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+        NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN_FOO }}
