--- a/.github/workflows/node_cicd.yml
+++ b/.github/workflows/node_cicd.yml
@@ -9,7 +9,6 @@ on:
 jobs:
   # build:
   #   runs-on: ubuntu-latest
-  #   environment: npm
 
   #   strategy:
   #     matrix:
@@ -28,7 +27,6 @@ jobs:
   publish:
     # needs: build
     runs-on: ubuntu-latest
-    environment: npm
 
     steps:
     - uses: actions/checkout@v2
@@ -36,8 +34,9 @@ jobs:
       with:
         node-version: '12.x'
         registry-url: 'https://registry.npmjs.org'
+        always-auth: true
     - run: npm ci
     # - run: npm version patch - TODO: Need to provide github identity for this to succeed
     - run: npm publish
       env:
-        NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN_FOO }}
+        NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
