--- a/.github/workflows/node_cicd.yml
+++ b/.github/workflows/node_cicd.yml
@@ -36,7 +36,9 @@ jobs:
         registry-url: 'https://registry.npmjs.org'
         always-auth: true
     - run: npm ci
-    # - run: npm version patch - TODO: Need to provide github identity for this to succeed
+    - run: git config user.name "workflow"
+    - run: git config user.email "workflow@users.noreply.github.com"     
+    - run: npm version patch
     - run: npm publish
       env:
         NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
