--- a/.github/workflows/node_cicd.yml
+++ b/.github/workflows/node_cicd.yml
@@ -23,7 +23,7 @@ jobs:
     - run: npm test
 
   publish:
-    # if: github.ref == 'refs/heads/master'
+    if: github.ref == 'refs/heads/master'
 
     needs: build
     runs-on: ubuntu-latest
