--- a/.github/workflows/node_cicd.yml
+++ b/.github/workflows/node_cicd.yml
@@ -2,7 +2,6 @@ name: Node CICD
 
 on:
   - push
-  - pull_request
 
 jobs:
   build:
@@ -13,14 +12,14 @@ jobs:
         node-version: [10.x, 12.x, 14.x, 15.x]
 
     steps:
-    - uses: actions/checkout@v2
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v2
-      with:
-        node-version: ${{ matrix.node-version }}
-    - run: npm ci
-    - run: npm run build --if-present
-    - run: npm test
+      - uses: actions/checkout@v2
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v2
+        with:
+          node-version: ${{ matrix.node-version }}
+      - run: npm ci
+      - run: npm run build --if-present
+      - run: npm test
 
   publish:
     if: github.ref == 'refs/heads/master'
@@ -29,18 +28,18 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
-    - run: echo ${{github.ref}}
-    - uses: actions/setup-node@v2
-      with:
-        node-version: '12.x'
-        registry-url: 'https://registry.npmjs.org'
-        always-auth: true
-    - run: npm ci
-    - run: git config user.name "gha-workflow"
-    - run: git config user.email "gha-workflow@users.noreply.github.com"     
-    - run: npm version patch
-    - run: npm publish
-      env:
-        NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
-    - run: git push
+      - uses: actions/checkout@v2
+      - run: echo ${{github.ref}}
+      - uses: actions/setup-node@v2
+        with:
+          node-version: "12.x"
+          registry-url: "https://registry.npmjs.org"
+          always-auth: true
+      - run: npm ci
+      - run: git config user.name "gha-workflow"
+      - run: git config user.email "gha-workflow@users.noreply.github.com"
+      - run: npm version patch
+      - run: npm publish
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+      - run: git push
