--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "watch:test": "jest --watch"
   },
   "dependencies": {
+    "ejs": "^3.1.5",
+    "mem-fs-editor": "^7.0.1",
     "yeoman-assert": "^3.1.1",
     "yeoman-generator": "^4.13.0",
     "yeoman-test": "^5.0.1",
