--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "generator-tf-infra",
-  "version": "0.2.3",
+  "version": "0.3.0",
   "description": "An opinionated generator for Terraform infrastructure projects",
   "license": "MIT",
   "repository": "https://github.com/shladdergoo/generator-tf-infra",
@@ -32,6 +32,8 @@
     "watch:test": "jest --watch"
   },
   "dependencies": {
+    "ejs": "^3.1.5",
+    "mem-fs-editor": "^7.0.1",
     "yeoman-assert": "^3.1.1",
     "yeoman-generator": "^4.13.0",
     "yeoman-test": "^5.0.1",
