--- a/src/templates/precommit/dotpre-commit-config.yaml
+++ b/src/templates/precommit/dotpre-commit-config.yaml
@@ -1,6 +1,7 @@
+repos:
 - repo: git://github.com/antonbabenko/pre-commit-terraform
-  rev: v1.7.4
+  rev: v1.47.0
   hooks:
     - id: terraform_fmt
     - id: terraform_docs
-    - id: terraform_validate_no_variables
+    - id: terraform_validate
