fix filenames in makefile

--- a/src/templates/Makefile
+++ b/src/templates/Makefile
@@ -1,6 +1,6 @@
 init: check-for-env-and-profile
 	rm -rf ./.terraform
-	terraform init -backend=true -backend-config=./environments/$(ENV)/backend.tf
+	terraform init -backend=true -backend-config=./environments/$(ENV)/backend.tfvars
 
 check-for-env-and-profile: check-var-ENV check-var-AWS_PROFILE
 
@@ -13,7 +13,7 @@ plan: init
 	@echo "* ENV:			$(ENV)"
 	@echo "* PROFILE:		$(AWS_PROFILE)"
 	@echo "*******************************************"
-	terraform plan --var-file=./environments/$(ENV)/variables.tf
+	terraform plan --var-file=./environments/$(ENV)/variables.tfvars
 
 apply: init
 	@echo "*******************************************"
@@ -21,7 +21,7 @@ apply: init
 	@echo "* ENV:			$(ENV)"
 	@echo "* PROFILE		$(AWS_PROFILE)"
 	@echo "*******************************************"
-	terraform apply --var-file=./environments/$(ENV)/variables.tf
+	terraform apply --var-file=./environments/$(ENV)/variables.tfvars
 
 destroy: init
 	@echo "*******************************************"
@@ -29,4 +29,4 @@ destroy: init
 	@echo "* ENV:			$(ENV)"
 	@echo "* PROFILE		$(AWS_PROFILE)"
 	@echo "*******************************************"
-	terraform destroy --var-file=./environments/$(ENV)/variables.tf
+	terraform destroy --var-file=./environments/$(ENV)/variables.tfvars
