--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "test": "jest",
     "coverage": "jest --coverage",
     "watch": "npm run build -- --watch",
-    "watch:test": "jest --watch"
+    "watch:test": "jest --watch",
+    "gen": "npm run build && npm link && rm -rf output && mkdir output && cd output && yo tf-infra && cd .."
   },
   "dependencies": {
     "ejs": "^3.1.5",
