--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "test": "jest",
     "coverage": "jest --coverage",
     "watch": "npm run build -- --watch",
-    "watch:test": "jest --watch"
+    "watch:test": "jest --watch",
+    "gen": "npm run build && npm link && rm -rf output && mkdir output && cd output && yo tf-infra && cd .."
   },
   "dependencies": {
     "ejs": "^3.1.5",
@@ -58,7 +59,7 @@
     "typescript": "^4.2.2"
   },
   "engines": {
-    "node": ">=10.0.0"
+    "node": ">=14.0.0"
   },
   "jest": {
     "preset": "ts-jest"
